Correccion de texto

--- a/TheMovieDataBaseMVC/Localizable.strings
+++ b/TheMovieDataBaseMVC/Localizable.strings
@@ -21,5 +21,5 @@
 "alert_profile" = "View Profile";
 "alert_cancel" = "Cancel";
 
-"remove_favorites" = "Add to favorites";
-"add_favorites" = "Remove from favorites";
+"remove_favorites" = "Remove from favorites";
+"add_favorites" = "Add to favorites";
